--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 html {
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 100px;
 }
 header {
     width: 100%;
@@ -10,4 +10,13 @@ header {
 body {
     width: 100%;
     height: 100%;
+}
+footer {
+    margin: 0;
+    width: 100%;
+    height: 100px;
+    background-color: #666;
+    text-align: center;
+    line-height: 100px;
+    color: #fff
 }
