--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 html {
     margin: 0;
+    padding: 0;
     width: 100%;
     height: 100px;
 }
@@ -18,5 +19,11 @@ footer {
     background-color: #666;
     text-align: center;
     line-height: 100px;
-    color: #fff
+    color: #fff;
+    position: fixed;
+}
+ul {
+    float: right;
+    display: inline;
+    padding: 0;
 }
