--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ footer {
     position: fixed;
 }
 .header-content-container {
-    margin: 0 auto;
+    margin: auto;
     width: 960px;
     height: 100%;
     color: #fff;
@@ -41,18 +41,23 @@ footer {
     width: auto;
     height: 100%;
     color: #777;
+    line-height: 100px;
 }
 .header-content-container > ul > li {
-    display: inline;
+    display: inline-block;
     padding: 20px;
     text-align: center;
-    color: aqua;
+    /* color: aqua; */
     border-right: 1px solid #ccc;
 }
+.header-content-contaier > .ul > li:last-child {
+    border-right: 0;
+}
 section {
-    width: 960px;
+    padding-top: 20px;
+    width: 100%;
     height: 100%;
-    background-color: black;
+    background-image: url('./assets/images/lilypads.png')
 }
 .content-container {
     margin: 0 auto;
@@ -60,7 +65,7 @@ section {
     height: 500px;
     background-color: #fff;
 }
-ul li{
+/* ul li{
     float: right;
     display: inline;
     widows: 30%;
@@ -69,8 +74,8 @@ ul li{
     border: 10px solid black;
 }
 ul li:first-child {
-    color: white;
+    color: black;
 }
 ul:hover {
-    background-color: aqua;
-}
+    background-color:orangered;
+} */
